--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Justin
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Justin!</h1>
-	<p>Physics student at <em>ETHZ</em>. <a href="/about">Read more ...</a></p>
+	<p>Physics student. <a href="/about">Read more ...</a></p>
 </div><!-- /.blurb -->
