--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,14 @@
-
+---
+layout: default
+title: About me
+---
+	<h1>{{ page.title }}</h1>
+	<body>
+      <nav>
+	    		<ul>
+	        		<li><a href="attendedLectures.html">Attended lectures</a></li>
+	    		</ul>
+			</nav>
+    
+  </body>
+  
