--- a/about/attendedLectures.html
+++ b/about/attendedLectures.html
@@ -10,6 +10,8 @@ title: Attended lectures
           <dl>
             <dt>Analysis 1</dt>
             <dd>Foundations of analysis, logic, set theory, calculus of one variable</dd>
+	    <dt>Linear algebra 1</dt>
+            <dd>Introduction to linear algebra, logic, bases and diagonalization</dd>
           </dl>
         </li>
         <li> 2. semester
