--- a/about/attendedLectures.html
+++ b/about/attendedLectures.html
@@ -11,16 +11,24 @@ title: Attended lectures
             <dt>Analysis 1</dt>
             <dd>Foundations of analysis, logic, set theory, calculus of one variable</dd>
 	    <dt>Linear algebra 1</dt>
-            <dd>Introduction to linear algebra, logic, bases and diagonalization</dd>
+            <dd>Introduction to linear algebra, logic, systems of equations, bases and diagonalization</dd>
+	    <dt>Physics 1</dt>
+            <dd>Newtonian mechanics in vector calculus framework, introduction to thermodynamics</dd>
+	    <dt>Computer science 1</dt>
+            <dd>Basics of computers, basic concepts of computer programming, language C++</dd>
+	    <dt>Geometry</dt>
+            <dd>Introduction to group theory and application to geometry</dd>
           </dl>
         </li>
         <li> 2. semester
           <dl>
             <dt>Analysis 2</dt>
             <dd>Calculus of many variables, topology</dd>
+	    <dt>Linear algebra 2</dt>
+            <dd>Advanced linear algebra, matrix decompositions, multilinear algebra</dd>
           </dl>
         </li>
       </ul>
-	  </nav>
+      </nav>
     
   </body>
