--- a/about/attendedLectures.html
+++ b/about/attendedLectures.html
@@ -25,7 +25,25 @@ title: Attended lectures
             <dt>Analysis 2</dt>
             <dd>Calculus of many variables, topology</dd>
 	    <dt>Linear algebra 2</dt>
-            <dd>Advanced linear algebra, matrix decompositions, multilinear algebra</dd>
+            <dd>Advanced linear algebra, matrix decompositions, multilinear algebra and tensor product spaces</dd>
+	    <dt>Physics 2</dt>
+            <dd>Electro- and magnetostatics, introduction to electrodynamics, special relativity</dd>
+	    <dt>Numerical methods for physics</dt>
+            <dd>Linear algebra, regression, root finding, ODEs</dd>
+          </dl>
+        </li>
+	<li> 3. semester
+          <dl>
+            <dt>Complex analysis</dt>
+            <dd></dd>
+	    <dt>Methods of mathematical physics</dt>
+            <dd></dd>
+	    <dt>Physics 3</dt>
+            <dd></dd>
+	    <dt>Analytical mechanics</dt>
+	    <dd></dd>
+	    <dt>Physics lab 1</dt>
+            <dd></dd>  
           </dl>
         </li>
       </ul>
