--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@ title: Justin's page
 <div class="blurb">
 	<h1>Hi there, I'm Justin!</h1>
 	<p>Physics student. <a href="/about">Read more ...</a></p>
+	<p>Work in progress</p>
 </div><!-- /.blurb -->
