Updated all attended lectures

--- a/about/attendedLectures.html
+++ b/about/attendedLectures.html
@@ -36,7 +36,7 @@ title: Attended lectures
           <dl>
             <dt>Complex analysis</dt>
             <dd></dd>
-	    <dt>Methods of mathematical physics</dt>
+	    <dt>Methods of mathematical physics 1</dt>
             <dd></dd>
 	    <dt>Physics 3</dt>
             <dd></dd>
@@ -44,6 +44,87 @@ title: Attended lectures
 	    <dd></dd>
 	    <dt>Physics lab 1</dt>
             <dd></dd>  
+          </dl>
+        </li>
+	<li> 4. semester
+          <dl>
+            <dt>Methods of mathematical physics 2</dt>
+            <dd></dd>
+	    <dt>Electrodynamics</dt>
+            <dd></dd>
+	    <dt>Theory of heat</dt>
+            <dd></dd>
+	    <dt>Probability and statistics</dt>
+	    <dd></dd>
+	    <dt>Physics lab 2</dt>
+            <dd></dd>  
+          </dl>
+        </li>
+	<li> 5. semester
+          <dl>
+            <dt>Quantum mechanics 1</dt>
+            <dd></dd>
+	    <dt>Introduction to solid state physics</dt>
+            <dd></dd>
+	    <dt>Astrophysics 1</dt>
+            <dd></dd>
+	    <dt>Advanced physics lab 1</dt>
+	    <dd></dd>
+	    <dt>Physics 1 (teaching assistant)/dt>
+            <dd></dd>  
+          </dl>
+        </li>
+	<li> 6. semester
+          <dl>
+            <dt>Quantum mechanics 2</dt>
+            <dd></dd>
+	    <dt>Introduction to atomic and particle physics</dt>
+            <dd></dd>
+	    <dt>Introduction to mathematical finance</dt>
+            <dd></dd>
+	    <dt>Brownian motion and stochastic calculus</dt>
+	    <dd></dd>
+	    <dt>Advanced physics lab 2</dt>
+            <dd></dd>
+	    <dt>Physics 2 (teaching assistant)</dt>
+            <dd></dd>  
+          </dl>
+        </li>
+	<li> 7. semester
+          <dl>
+            <dt>General relativity</dt>
+            <dd></dd>
+	    <dt>Statistical physics</dt>
+            <dd></dd>
+	    <dt>Introduction to computational physics</dt>
+            <dd></dd>
+	    <dt>Nonlinear dynamics and chaos</dt>
+	    <dd></dd>
+	    <dt>Bayesian statistics</dt>
+            <dd></dd>
+	    <dt>Neural network theory</dt>
+            <dd></dd>
+	    <dt>Complex analysis (teaching assistant)</dt>
+            <dd></dd>
+          </dl>
+        </li>
+	<li> 8. semester
+          <dl>
+            <dt>Astrophysics 2</dt>
+            <dd></dd>
+	    <dt>Deep learning in scientific computing</dt>
+            <dd></dd>
+	    <dt>Soccer analytics</dt>
+            <dd></dd>
+	    <dt>Semester project: <i>Physics-informed neural networks for Kepler problems</i></dt>
+          </dl>
+        </li>
+	<li> 9. semester
+          <dl>
+	    <dt>Master's thesis: <i>Methods for aggregating atmospheric aerosol optical depth</i></dt>
+            <dd></dd>
+	    <dt>Physics 1 (teaching assistant)</dt>
+            <dd></dd>
           </dl>
         </li>
       </ul>
