Added all lectures with description

--- a/about/attendedLectures.html
+++ b/about/attendedLectures.html
@@ -2,132 +2,145 @@
 layout: default
 title: Attended lectures
 ---
-	<h1>{{ page.title }}</h1>
-	<body>
-    <nav>
-      <ul>
-        <li> 1. semester
-          <dl>
-            <dt>Analysis 1</dt>
-            <dd>Foundations of analysis, logic, set theory, calculus of one variable</dd>
-	    <dt>Linear algebra 1</dt>
-            <dd>Introduction to linear algebra, logic, systems of equations, bases and diagonalization</dd>
-	    <dt>Physics 1</dt>
-            <dd>Newtonian mechanics in vector calculus framework, introduction to thermodynamics</dd>
-	    <dt>Computer science 1</dt>
-            <dd>Basics of computers, basic concepts of computer programming, language C++</dd>
-	    <dt>Geometry</dt>
-            <dd>Introduction to group theory and application to geometry</dd>
-          </dl>
-        </li>
-        <li> 2. semester
-          <dl>
-            <dt>Analysis 2</dt>
-            <dd>Calculus of many variables, topology</dd>
-	    <dt>Linear algebra 2</dt>
-            <dd>Advanced linear algebra, matrix decompositions, multilinear algebra and tensor product spaces</dd>
-	    <dt>Physics 2</dt>
-            <dd>Electro- and magnetostatics, introduction to electrodynamics, special relativity</dd>
-	    <dt>Numerical methods for physics</dt>
-            <dd>Linear algebra, regression, root finding, ODEs</dd>
-          </dl>
-        </li>
-	<li> 3. semester
-          <dl>
-            <dt>Complex analysis</dt>
-            <dd></dd>
-	    <dt>Methods of mathematical physics 1</dt>
-            <dd></dd>
-	    <dt>Physics 3</dt>
-            <dd></dd>
-	    <dt>Analytical mechanics</dt>
-	    <dd></dd>
-	    <dt>Physics lab 1</dt>
-            <dd></dd>  
-          </dl>
-        </li>
-	<li> 4. semester
-          <dl>
-            <dt>Methods of mathematical physics 2</dt>
-            <dd></dd>
-	    <dt>Electrodynamics</dt>
-            <dd></dd>
-	    <dt>Theory of heat</dt>
-            <dd></dd>
-	    <dt>Probability and statistics</dt>
-	    <dd></dd>
-	    <dt>Physics lab 2</dt>
-            <dd></dd>  
-          </dl>
-        </li>
-	<li> 5. semester
-          <dl>
-            <dt>Quantum mechanics 1</dt>
-            <dd></dd>
-	    <dt>Introduction to solid state physics</dt>
-            <dd></dd>
-	    <dt>Astrophysics 1</dt>
-            <dd></dd>
-	    <dt>Advanced physics lab 1</dt>
-	    <dd></dd>
-	    <dt>Physics 1 (teaching assistant)/dt>
-            <dd></dd>  
-          </dl>
-        </li>
-	<li> 6. semester
-          <dl>
-            <dt>Quantum mechanics 2</dt>
-            <dd></dd>
-	    <dt>Introduction to atomic and particle physics</dt>
-            <dd></dd>
-	    <dt>Introduction to mathematical finance</dt>
-            <dd></dd>
-	    <dt>Brownian motion and stochastic calculus</dt>
-	    <dd></dd>
-	    <dt>Advanced physics lab 2</dt>
-            <dd></dd>
-	    <dt>Physics 2 (teaching assistant)</dt>
-            <dd></dd>  
-          </dl>
-        </li>
-	<li> 7. semester
-          <dl>
-            <dt>General relativity</dt>
-            <dd></dd>
-	    <dt>Statistical physics</dt>
-            <dd></dd>
-	    <dt>Introduction to computational physics</dt>
-            <dd></dd>
-	    <dt>Nonlinear dynamics and chaos</dt>
-	    <dd></dd>
-	    <dt>Bayesian statistics</dt>
-            <dd></dd>
-	    <dt>Neural network theory</dt>
-            <dd></dd>
-	    <dt>Complex analysis (teaching assistant)</dt>
-            <dd></dd>
-          </dl>
-        </li>
-	<li> 8. semester
-          <dl>
-            <dt>Astrophysics 2</dt>
-            <dd></dd>
-	    <dt>Deep learning in scientific computing</dt>
-            <dd></dd>
-	    <dt>Soccer analytics</dt>
-            <dd></dd>
-	    <dt>Semester project: <i>Physics-informed neural networks for Kepler problems</i></dt>
-          </dl>
-        </li>
-	<li> 9. semester
-          <dl>
-	    <dt>Master's thesis: <i>Methods for aggregating atmospheric aerosol optical depth</i></dt>
-            <dd></dd>
-	    <dt>Physics 1 (teaching assistant)</dt>
-            <dd></dd>
-          </dl>
-        </li>
-      </ul>
-      </nav>
-    
-  </body>
+<h1>{{ page.title }}</h1>
+
+<body>
+  <nav>
+    <ul>
+      <li> 1st semester
+        <dl>
+          <dt>Analysis 1</dt>
+          <dd>Foundations of analysis, logic, set theory, calculus of one variable</dd>
+          <dt>Linear algebra 1</dt>
+          <dd>Introduction to linear algebra, logic, systems of equations, bases and diagonalization</dd>
+          <dt>Physics 1</dt>
+          <dd>Newtonian mechanics in vector calculus framework, introduction to thermodynamics</dd>
+          <dt>Computer science 1</dt>
+          <dd>Basics of computers, basic concepts of computer programming, language C++</dd>
+          <dt>Geometry</dt>
+          <dd>Introduction to group theory and application to geometry</dd>
+        </dl>
+      </li>
+      <li> 2nd semester
+        <dl>
+          <dt>Analysis 2</dt>
+          <dd>Calculus of many variables, topology</dd>
+          <dt>Linear algebra 2</dt>
+          <dd>Advanced linear algebra, matrix decompositions, multilinear algebra and tensor product spaces</dd>
+          <dt>Physics 2</dt>
+          <dd>Electro- and magnetostatics, introduction to electrodynamics, special relativity</dd>
+          <dt>Numerical methods for physics</dt>
+          <dd>Linear algebra, regression, root finding, ODEs</dd>
+          <dt>Puzzles, paradoxes, and the foundations of thought</dt>
+          <dd>Logic and different logic systems, paradoxes and applications of game theory</dd>
+        </dl>
+      </li>
+      <li> 3rd semester
+        <dl>
+          <dt>Complex analysis</dt>
+          <dd>Analysis with functions of complex variables</dd>
+          <dt>Methods of mathematical physics 1</dt>
+          <dd>PDEs, Fourier transform, special functions and eigenfunction expansion, theory of distributions</dd>
+          <dt>Physics 3</dt>
+          <dd>Quantum and atomic physics, optics, and statistical physics</dd>
+          <dt>Analytical mechanics</dt>
+          <dd>Newtonian, Lagrangian, and Hamiltonian mechanics, Hamilton-Jacobi equation, relativistic mechanics</dd>
+          <dt>Physics lab 1</dt>
+          <dd>Introduction to experimental physics, experiments, data analysis, writing of scientific reports</dd>
+          <dt>Mathematics in politics and law (exam not taken)</dt>
+          <dd>Voting systems, apportionment theory</dd>
+        </dl>
+      </li>
+      <li> 4th semester
+        <dl>
+          <dt>Electrodynamics</dt>
+          <dd>Discussion of Maxwell's equations, Lagrangian and covariant electrodynamics</dd>
+          <dt>Methods of mathematical physics 2</dt>
+          <dd>Group theory, representation theory, Lie groups and Lie algebras, physical application</dd>
+          <dt>Theory of heat</dt>
+          <dd>Thermodynamics, kinetic theory of gasses, statistical mechanics</dd>
+          <dt>Probability and statistics</dt>
+          <dd>Discrete and continuous probability spaces, limit theorems, statistics</dd>
+          <dt>Physics lab 2</dt>
+          <dd>Continuation of physics lab 1</dd>
+          <dt>What is truth</dt>
+          <dd>Reading and discussing different works in epistemology</dd>
+        </dl>
+      </li>
+      <li> 5th semester
+        <dl>
+          <dt>Astrophysics 1</dt>
+          <dd>Fundamental concepts of astrophysics applied to planets, stars, galaxies and the universe</dd>
+          <dt>Introduction to solid state physics</dt>
+          <dd>Excitations, electronic properties, semiconductors, magnetism, and superconductivity</dd>
+          <dt>Quantum mechanics 1</dt>
+          <dd>General structure of quantum theory, operator theory, perturbation theory, spin, symmetry</dd>
+          <dt>Advanced physics lab 1</dt>
+          <dd>Planning, setup, conducting, and evaluating and interpreting experiments, including measurement accuracy
+          </dd>
+          <dt>Physics 1 (teaching assistant)</dt>
+          <dd>Preparing and presenting weekly lessons, grading of excersizes</dd>
+        </dl>
+      </li>
+      <li> 6th semester
+        <dl>
+          <dt>Introduction to atomic and particle physics</dt>
+          <dd>Elementary particles and interactions, standard model, composite systems, applications of atomic physics
+          </dd>
+          <dt>Quantum mechanics 2</dt>
+          <dd>Many-body systems, approximation methods, scattering theory, second quantization, relativistic quantum
+            mechanics</dd>
+          <dt>Introduction to mathematical finance</dt>
+          <dd>Fundamental theorem of asset pricing, hedging duality theorems, convex duality in utility maximization in
+            discrete time</dd>
+          <dt>Advanced physics lab 2</dt>
+          <dd>Continuation of advanced physics lab 1</dd>
+          <dt>Brownian motion and stochastic calculus (exam not taken)</dt>
+          <dd>Brownian motion, martingale theory, stochastic integration, stochastic and partial differential equations
+          </dd>
+          <dt>Physics 2 (teaching assistant)</dt>
+          <dd>Preparing and presenting weekly lessons, grading of excersizes</dd>
+        </dl>
+      </li>
+      <li> 7th semester
+        <dl>
+          <dt>General relativity</dt>
+          <dd>Mathematical foundations of general relativity, underlying physical principles, applications</dd>
+          <dt>Statistical physics</dt>
+          <dd>Second quantization, approximation methods, phase transitions, superfluidity</dd>
+          <dt>Introduction to computation physics</dt>
+          <dd>Partial differential equations, Monte Carlo methods, many-body simulations, phase transitions</dd>
+          <dt>Nonlinear dynamics and chaos</dt>
+          <dd>Near-equilibrium dynamics, bifurcations, non-autonomous systems, chaotic dynamics</dd>
+          <dt>Neural network theory (exam not taken)</dt>
+          <dd>Approximation theory, universal approximation theorems, VC dimension, and seperating surfaces</dd>
+          <dt>Bayesian statistics (exam not taken)</dt>
+          <dd>Bayesian approach, model selection, hierarchical and empirical methods, computational methods</dd>
+          <dt>Complex analysis (teaching assistant)</dt>
+          <dd>Preparing and presenting weekly lessons, grading of excersizes</dd>
+        </dl>
+      </li>
+      <li> 8th semester
+        <dl>
+          <dt>Astrophysics 2</dt>
+          <dd>Processing in an expanding universe, structure formation, baryonic and non-baryonic structures</dd>
+          <dt>Deep learning in scientific computing</dt>
+          <dd>Design and implementation of algorithms, guarantees, applications in science and engineering</dd>
+          <dt>Soccer analytics</dt>
+          <dd>Analyzing soccer data for tactical decision-making</dd>
+          <dt>Semester thesis</dt>
+          <dd>Building and testing a physics-informed neural network to solve the Kepler problem</dd>
+        </dl>
+      </li>
+      <li> 9th semester
+        <dl>
+          <dt>Master thesis</dt>
+          <dd>Assessing methods of aggregation for aerosol optical depth measurements</dd>
+          <dt>Physics 1 (teaching assistant)</dt>
+          <dd>Preparing and presenting weekly lessons, grading of excersizes</dd>
+        </dl>
+      </li>
+    </ul>
+  </nav>
+
+</body>
