--- a/about/attendedLectures.html
+++ b/about/attendedLectures.html
@@ -79,7 +79,7 @@ title: Attended lectures
           <dd>Planning, setup, conducting, and evaluating and interpreting experiments, including measurement accuracy
           </dd>
           <dt>Physics 1 (teaching assistant)</dt>
-          <dd>Preparing and presenting weekly lessons, grading of excersizes</dd>
+          <dd>Preparing and presenting weekly lessons, grading of exercises</dd>
         </dl>
       </li>
       <li> 6th semester
@@ -99,7 +99,7 @@ title: Attended lectures
           <dd>Brownian motion, martingale theory, stochastic integration, stochastic and partial differential equations
           </dd>
           <dt>Physics 2 (teaching assistant)</dt>
-          <dd>Preparing and presenting weekly lessons, grading of excersizes</dd>
+          <dd>Preparing and presenting weekly lessons, grading of exercises</dd>
         </dl>
       </li>
       <li> 7th semester
@@ -117,7 +117,7 @@ title: Attended lectures
           <dt>Bayesian statistics (exam not taken)</dt>
           <dd>Bayesian approach, model selection, hierarchical and empirical methods, computational methods</dd>
           <dt>Complex analysis (teaching assistant)</dt>
-          <dd>Preparing and presenting weekly lessons, grading of excersizes</dd>
+          <dd>Preparing and presenting weekly lessons, grading of exercises</dd>
         </dl>
       </li>
       <li> 8th semester
@@ -137,7 +137,7 @@ title: Attended lectures
           <dt>Master thesis</dt>
           <dd>Assessing methods of aggregation for aerosol optical depth measurements</dd>
           <dt>Physics 1 (teaching assistant)</dt>
-          <dd>Preparing and presenting weekly lessons, grading of excersizes</dd>
+          <dd>Preparing and presenting weekly lessons, grading of exercises</dd>
         </dl>
       </li>
     </ul>
