--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,7 @@ title: About me
       <nav>
 	    		<ul>
 	        		<li><a href="attendedLectures.html">Attended lectures</a></li>
+				<li><a href="projects.html">My projects<\a><\li>
 	    		</ul>
 			</nav>
     
