--- a/cv/index.html
+++ b/cv/index.html
@@ -1,1 +1,8 @@
-
+---
+layout: default
+title: About me
+---
+	<h1>{{ page.title }}</h1>
+	<body>
+   <iframe src="/uploads/cv.pdf" width="100%" height="500px">
+  </body>
