--- a/cv/index.html
+++ b/cv/index.html
@@ -2,7 +2,8 @@
 layout: default
 title: About me
 ---
-	<h1>{{ page.title }}</h1>
-	<body>
-   <iframe src="/uploads/cv.pdf" width="100%" height="500px">
-  </body>
+<h1>{{ page.title }}</h1>
+<body>
+	<h3>This is my CV</h3>
+   	<iframe src="/uploads/cv.pdf" width="100%" height="500px">
+</body>
