--- a/cv/index.html
+++ b/cv/index.html
@@ -1,9 +1,8 @@
 ---
 layout: default
-title: About me
+title: Curriculum Vitae
 ---
 <h1>{{ page.title }}</h1>
 <body>
-	<h3>This is my CV</h3>
    	<iframe src="/uploads/cv.pdf" width="100%" height="500px">
 </body>
