--- a/cv/index.html
+++ b/cv/index.html
@@ -4,5 +4,5 @@ title: Curriculum Vitae
 ---
 <h1>{{ page.title }}</h1>
 <body>
-   	<iframe src="/uploads/cv.pdf" width="100%" height="100%">
+   	<iframe src="/uploads/cv.pdf" width="100%" height="550px">
 </body>
