--- a/about/projects.html
+++ b/about/projects.html
@@ -8,11 +8,9 @@ title: My projects
   <nav>
     <ul>   
       
-      <li> Semester project
-        <dl>
-          <dt>Physics-informed neural networks for Kepler problems</dt>
-          <dd>Description on semester project</dd>
-        </dl>
+      <li> <h3>Semester project</h3>
+          <h4><a href="https://github.com/mazenauer/Kepler-PINN">Physics-informed neural networks for Kepler problems</a></h4>
+          Description on semester project
       </li>
       
       <li> Master's thesis
