--- a/about/projects.html
+++ b/about/projects.html
@@ -8,12 +8,12 @@ title: My projects
   <nav>
     <ul>   
       
-      <li> <h2>Semester project</h2>
+      <li style="font-weight:normal;"> <h2>Semester project</h2>
           <h4><a href="https://github.com/mazenauer/Kepler-PINN">Physics-informed neural networks for Kepler problems</a></h4>
           Description on semester project
       </li>
       
-      <li> <h2>Master's thesis</h2>
+      <li style="font-weight:normal;"> <h2>Master's thesis</h2>
           <h4>Data aggregation methods for aerosol optical depth (ongoing)</h4>
           Description on master's thesis
       </li>
