--- a/about/projects.html
+++ b/about/projects.html
@@ -4,16 +4,24 @@ title: My projects
 ---
 <h1>{{ page.title }}</h1>
 
+<style>
+  li {
+    font-weight: normal; 
+    font-family: 'Serif';
+    padding: 1cm;
+  }
+</style>
+
 <body>
   <nav>
     <ul>   
       
-      <li style="font-weight:normal;"> <h2>Semester project</h2>
+      <li> <h2>Semester project</h2>
           <h4><a href="https://github.com/mazenauer/Kepler-PINN">Physics-informed neural networks for Kepler problems</a></h4>
           Description on semester project
       </li>
       
-      <li style="font-weight:normal;"> <h2>Master's thesis</h2>
+      <li> <h2>Master's thesis</h2>
           <h4>Data aggregation methods for aerosol optical depth (ongoing)</h4>
           Description on master's thesis
       </li>
