--- a/about/projects.html
+++ b/about/projects.html
@@ -4,20 +4,13 @@ title: My projects
 ---
 <h1>{{ page.title }}</h1>
 
-<style>
-  .project {
-    font-weight: normal;
-    /*font-family: 'Serif';*/
-    padding: 1cm;
-  }
-</style>
-
 <body>
   <nav>
     <ul>   
       
-      <li class=project> <h2>Semester project</h2>
+      <li> <h2>Semester project</h2>
           <h4><a href="https://github.com/mazenauer/Kepler-PINN">Physics-informed neural networks for Kepler problems</a></h4>
+          <p class=project>
           To kick off my semester thesis I read a lot of papers about symplectic ODE solvers and physics-informed neural networks (PINNs). 
           Dynamical systems, or ODEs, are best solved with symplectic integrators that preserve a physical structure in the solution. For example, 
           while many integration schemes such as Euler's method or the Runge-Kutta methods do not preserve energy, symplectic methods do. 
@@ -45,11 +38,14 @@ title: My projects
           sending batch jobs, using git and GitHub to save my work along the way and make it public and reproducible. Last but not least, 
           with our weekly group meetings I learned a lot about communicating my work, helping each other out when someone faces a difficult obstacle,
           and writing scientific reports and maintaining an associated repository.
+          </p>
       </li>
       
-      <li class=project> <h2>Master's thesis</h2>
+      <li> <h2>Master's thesis</h2>
           <h4>Data aggregation methods for aerosol optical depth (ongoing)</h4>
-          Description on master's thesis
+          <p class=project>
+            Description on master's thesis
+          </p>
       </li>
     </ul>
   </nav>
