--- a/about/projects.html
+++ b/about/projects.html
@@ -10,7 +10,7 @@ title: My projects
       
       <li> <h2>Semester project</h2>
           <h4><a href="https://github.com/mazenauer/Kepler-PINN">Physics-informed neural networks for Kepler problems</a></h4>
-          <p class=project>
+          <p class=project style="font-size:0.5em">
           To kick off my semester thesis I read a lot of papers about symplectic ODE solvers and physics-informed neural networks (PINNs). 
           Dynamical systems, or ODEs, are best solved with symplectic integrators that preserve a physical structure in the solution. For example, 
           while many integration schemes such as Euler's method or the Runge-Kutta methods do not preserve energy, symplectic methods do. 
