--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@ layout: default
 title: Justin's page
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Justin!</h1>
-	<p>Physics student. <a href="/about">Read more ...</a></p>
-	<p>Work in progress</p>
+	<h1>Welcome</h1>
+		<p>
+			I am Justin, soon physics graduate. <a href="/about">Read more</a> about the lectures I attended at my university 
+			ETH in Zurich. You will also find a summary of the major projects I worked on.
+			On the <a href="/cv">CV</a> section of this page you will find a pdf version of my current CV.	
+		</p> 
+		<p>	
+			Please not that this page is new and still being worked on.
+		</p>
 </div><!-- /.blurb -->
