--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@ title: Justin's page
 			On the <a href="/cv">CV</a> section of this page you will find a pdf version of my current CV.	
 		</p> 
 		<p>	
-			Please not that this page is new and still being worked on.
+			Please note that this page is new and still being worked on.
 		</p>
 </div><!-- /.blurb -->
