--- a/about/index.html
+++ b/about/index.html
@@ -4,12 +4,15 @@ title: About me
 ---
 	<h1>{{ page.title }}</h1>
 	<body>
-      <nav>
+      		<nav>
 	    		<ul>
 	        		<li><a href="attendedLectures.html">Attended lectures</a></li>
 				<li><a href="projects.html">My projects</a></li>
 	    		</ul>
-			</nav>
+		</nav>
+		<p>
+			Let me introduce myself here.
+		</p>
     
-  </body>
+  	</body>
   
